; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_common.c_mp_dup_str_array.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_common.c_mp_dup_str_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @mp_dup_str_array(i8* %0, i8** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8** %1, i8*** %4, align 8
  store i8** null, i8*** %5, align 8
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %32, %2
  %9 = load i8**, i8*** %4, align 8
  %10 = icmp ne i8** %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %8
  %12 = load i8**, i8*** %4, align 8
  %13 = load i32, i32* %7, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i8*, i8** %12, i64 %14
  %16 = load i8*, i8** %15, align 8
  %17 = icmp ne i8* %16, null
  br label %18

18:                                               ; preds = %11, %8
  %19 = phi i1 [ false, %8 ], [ %17, %11 ]
  br i1 %19, label %20, label %35

20:                                               ; preds = %18
  %21 = load i8*, i8** %3, align 8
  %22 = load i8**, i8*** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load i8*, i8** %3, align 8
  %25 = load i8**, i8*** %4, align 8
  %26 = load i32, i32* %7, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i8*, i8** %25, i64 %27
  %29 = load i8*, i8** %28, align 8
  %30 = call i32* @talloc_strdup(i8* %24, i8* %29)
  %31 = call i32 @MP_TARRAY_APPEND(i8* %21, i8** %22, i32 %23, i32* %30)
  br label %32

32:                                               ; preds = %20
  %33 = load i32, i32* %7, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %7, align 4
  br label %8

35:                                               ; preds = %18
  %36 = load i8**, i8*** %5, align 8
  %37 = icmp ne i8** %36, null
  br i1 %37, label %38, label %43

38:                                               ; preds = %35
  %39 = load i8*, i8** %3, align 8
  %40 = load i8**, i8*** %5, align 8
  %41 = load i32, i32* %6, align 4
  %42 = call i32 @MP_TARRAY_APPEND(i8* %39, i8** %40, i32 %41, i32* null)
  br label %43

43:                                               ; preds = %38, %35
  %44 = load i8**, i8*** %5, align 8
  ret i8** %44
}

declare dso_local i32 @MP_TARRAY_APPEND(i8*, i8**, i32, i32*) #1

declare dso_local i32* @talloc_strdup(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
